No longer wrapping answers in a div

--- a/css/qa-editor.css
+++ b/css/qa-editor.css
@@ -7,6 +7,6 @@ p.question {
     margin-left: 2em;
 }
 
-div.answer p {
+p.answer {
     margin-left: 2em;
 }
